# db-migrations

./: alembic.ini  database.py  pyproject.toml  yoyo.ini
alembic-migration/: env.py
alembic-migration/versions/: 9ad709280a18_alter_todods_alembic_table_and_add_.py  cf1869d32fa3_create_a_base_script_for_dbmiration_.py
models/: models.py
yoyo-migration/: 20231220_01_Q0xdg-create-new-users-and-todos-table.sql  20231220_02_tsQhh-add-new-column.rollback.sql  20231220_02_tsQhh-add-new-column.sql
